@@ -1,5 +1,5 @@
 
-x11vnc README file                         Date: Sat Dec 15 19:10:20 EST 2007
+x11vnc README file                         Date: Sun Dec 16 13:21:20 EST 2007
 
 The following information is taken from these URLs:
 
@@ -11842,7 +11842,7 @@ x11vnc: a VNC server for real X displays
    Here are all of x11vnc command line options:
 % x11vnc -opts      (see below for -help long descriptions)
 
-x11vnc: allow VNC connections to real X11 displays. 0.9.4 lastmod: 2007-12-15
+x11vnc: allow VNC connections to real X11 displays. 0.9.4 lastmod: 2007-12-16
 
 x11vnc options:
   -display disp            -auth file               -N                     
@@ -11961,7 +11961,7 @@ libvncserver-tight-extension options:
 
 % x11vnc -help
 
-x11vnc: allow VNC connections to real X11 displays. 0.9.4 lastmod: 2007-12-15
+x11vnc: allow VNC connections to real X11 displays. 0.9.4 lastmod: 2007-12-16
 
 (type "x11vnc -opts" to just list the options.)
 
