@@ -4871,7 +4871,7 @@ char gui_code[] = "";
 "}\n"
 "\n"
 "proc old_balloon {} {\n"
-"	global client_str saved_client_str\n"
+"	global client_str saved_clients_str\n"
 "	set str \"\"\n"
 "	if {[info exists client_str]} {\n"
 "		if {$client_str != \"\"} {\n"
@@ -4879,8 +4879,8 @@ char gui_code[] = "";
 "		}\n"
 "	}\n"
 "	if {$str == \"\"} {\n"
-"		if {[info exists saved_client_str]} {\n"
-"			set str $saved_client_str\n"
+"		if {[info exists saved_clients_str]} {\n"
+"			set str $saved_clients_str\n"
 "		}\n"
 "	}\n"
 "	if {$str != \"\"} {\n"
@@ -5040,6 +5040,7 @@ char gui_code[] = "";
 "	}\n"
 "	$menu add cascade -font $mfont -label \"Window View:\" -menu $wv\n"
 "\n"
+"	$menu add command -font $mfont -label \"Dismiss\" -command \"$menu unpost\"\n"
 "	$menu add command -font $mfont -label \"Stop x11vnc\" -command clean_icon_exit\n"
 "\n"
 "	set items [get_custom_menu_items]\n"
@@ -5058,10 +5059,11 @@ char gui_code[] = "";
 "	bind $icon_win <Enter> {set client_balloon_id [after 500 show_client_balloon]}\n"
 "	bind $icon_win <Button> {kill_client_balloon}\n"
 "	bind $icon_win <Leave>  {kill_client_balloon}\n"
-"	bind $icon_win <ButtonPress-2> {kill_client_balloon; show_client_balloon}\n"
+"	bind $icon_win <Shift-ButtonRelease-1> {kill_client_balloon; show_client_balloon}\n"
+"	bind $icon_win <ButtonRelease-2> {kill_client_balloon; show_client_balloon}\n"
 "#	bind $menu <Leave> \"lmenu $menu\"\n"
 "#	bind $menu <Enter> \"set left_iconwin_menu 0\"\n"
-"##	bind $menu <KeyPress-Escape> \"$menu unpost\"\n"
+"#	bind $menu <KeyPress-Escape> \"$menu unpost\"\n"
 "\n"
 "	bind . <Control-KeyPress-c> {destroy .; exit 0}\n"
 "\n"
@@ -5082,8 +5084,19 @@ char gui_code[] = "";
 "	wm iconname . \"tkx11vnc\"\n"
 "	wm title . \"tkx11vnc\"\n"
 "	update\n"
-"	wm deiconify .\n"
+"	if {$tray_embed && $tray_running} {\n"
+"		wm deiconify .\n"
+"		#after 10000 {wm deiconify .; puts \"reqheight [winfo reqheight .]\"; puts \"reqwidth  [winfo reqwidth  .]\"; puts \"height [winfo height .]\"; puts \"width  [winfo width  .]\"}\n"
+"	} else {\n"
+"		wm deiconify .\n"
+"	}\n"
 "	update\n"
+"\n"
+"#puts \"reqheight [winfo reqheight .]\"\n"
+"#puts \"reqwidth  [winfo reqwidth  .]\"\n"
+"#puts \"height [winfo height .]\"\n"
+"#puts \"width  [winfo width  .]\"\n"
+"#puts \"AAA\"\n"
 "\n"
 "	old_balloon\n"
 "}\n"
