@@ -2,7 +2,7 @@
 .TH X11VNC "1" "December 2007" "x11vnc " "User Commands"
 .SH NAME
 x11vnc - allow VNC connections to real X11 displays
-         version: 0.9.4, lastmod: 2007-12-15
+         version: 0.9.4, lastmod: 2007-12-16
 .SH SYNOPSIS
 .B x11vnc
 [OPTION]...
